# Micrasverse

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  box2d_memory.txt  build.bat  build.sh  build_test.bat  compile_shaders.sh  diagnose_build.bat  format.sh  new_build.bat  new_build.sh  to-dos.txt
build_diag/: CMakeCache.txt
cmake/: FindGLFW3.cmake
docs/assets/: Micrasverse 2025-04-27.gif:Zone.Identifier
include/GLFW/: glfw3.h
include/KHR/: khrplatform.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  imgui.ini  main.cpp  main2.cpp
src/config/: CMakeLists.txt  config.cpp  constants.hpp  target.cpp  target.hpp
src/config/include/config/: constants.hpp  proxy_config.hpp  target.hpp
src/core/: CMakeLists.txt  core.cpp
src/core/include/core/: constants.h  constants.hpp  types.hpp
src/core/include/micrasverse_core/: types.hpp
src/io/: CMakeLists.txt  keyboard.cpp  mouse.cpp
src/io/include/io/: keyboard.hpp  mouse.hpp
src/physics/: CMakeLists.txt  argb.cpp  basic_robot_controller.cpp  box2d_button.cpp  box2d_dipswitch.cpp  box2d_distance_sensor.cpp  box2d_led.cpp  box2d_maze.cpp  box2d_micrasbody.cpp  box2d_motor.cpp  box2d_physics_engine.cpp  box2d_physics_factory.cpp  box2d_rectanglebody.cpp  box2d_robot.cpp  box2d_world.cpp  dipswitch.cpp  distancesensor.cpp  maze.cpp  micrasbody.cpp  motor.cpp  physics_engine.cpp  rectanglebody.cpp  world.cpp
src/physics/include/physics/: argb.hpp  basic_robot_controller.hpp  box2d_button.hpp  box2d_dipswitch.hpp  box2d_distance_sensor.hpp  box2d_led.hpp  box2d_maze.hpp  box2d_micrasbody.hpp  box2d_motor.hpp  box2d_physics_engine.hpp  box2d_physics_factory.hpp  box2d_rectanglebody.hpp  box2d_robot.hpp  box2d_world.hpp  dipswitch.hpp  distancesensor.h  distancesensor.hpp  i_actuator.hpp  i_argb.hpp  i_dipswitch.hpp  i_distance_sensor.hpp  i_led.hpp  i_motor.hpp  i_physics_engine.hpp  i_physics_factory.hpp  i_robot.hpp  i_robot_controller.hpp  i_sensor.hpp  maze.h  maze.hpp  micrasbody.hpp  motor.h  motor.hpp  physics_engine.hpp  physics_types.hpp  rectanglebody.h  rectanglebody.hpp  world.h  world.hpp
src/physics/include/physics/core/: types.cpp  types.hpp
src/proxy/: CMakeLists.txt  argb.cpp
src/proxy/include/micras/proxy/: argb.hpp  battery.hpp  box2d_sensor_adapter.hpp  button.hpp  buzzer.hpp  dip_switch.hpp  fan.hpp  gui_controller.hpp  i_distance_sensor.hpp  imu.hpp  led.hpp  locomotion.hpp  motor.hpp  proxy_bridge.hpp  rotary_sensor.hpp  serializable.hpp  stopwatch.hpp  storage.hpp  torque_sensors.hpp  wall_sensors.hpp
src/proxy/include/proxy/: argb.hpp  locomotion.hpp  wall_sensors.hpp
src/proxy/src/: argb.cpp  battery.cpp  box2d_sensor_adapter.cpp  button.cpp  buzzer.cpp  dip_switch.cpp  fan.cpp  gui_controller.cpp  imu.cpp  led.cpp  locomotion.cpp  motor.cpp  proxy_bridge.cpp  rotary_sensor.cpp  stopwatch.cpp  storage.cpp  torque_sensors.cpp  wall_sensors.cpp  wall_sensors.tpp
src/render/: CMakeLists.txt  argbrender.cpp  camera.cpp  keyboard.cpp  lidarrender.cpp  lightobj.cpp  material.cpp  mazerender.cpp  mesh.cpp  micrasrender.cpp  model.cpp  mouse.cpp  render_engine.cpp  sceneobj.cpp  screen.cpp  shader.cpp  vulkan_engine.cpp
src/render/GUI/: gui.cpp  plot.cpp
src/render/GUI/include/GUI/: gui.hpp  plot.hpp
src/render/assets/: fragment-core.glsl  fragment-led.glsl  fragment-micras.glsl  fragment-walls.glsl  vertex-core.glsl
src/render/include/models/: led.hpp  micrasmodel.h  micrasmodel.hpp  rectangle.h  rectangle.hpp
src/render/include/render/: argbrender.hpp  boundingbox.hpp  camera.h  camera.hpp  keyboard.h  keyboard.hpp  lidarrender.hpp  lightobj.hpp  material.hpp  mazerender.hpp  mesh.h  mesh.hpp  micrasrender.hpp  model.h  model.hpp  mouse.h  mouse.hpp  render_engine.hpp  sceneobj.hpp  screen.h  screen.hpp  shader.h  shader.hpp  vulkan_engine.hpp
src/render/plot/: plot.cpp
src/render/plot/include/plot/: plot.hpp
src/render/shaders/: shader.vert  vert.spv
src/render/vulkan_engine/: first_app.cpp  keyboard_movement_controller.cpp  lve_buffer.cpp  lve_camera.cpp  lve_descriptors.cpp  lve_device.cpp  lve_game_object.cpp  lve_imgui.cpp  lve_model.cpp  lve_pipeline.cpp  lve_render_system.cpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_swapchain.cpp  lve_window.cpp  simple_render_system.cpp  vulkan_engine.cpp
src/render/vulkan_engine/include/vulkan_engine/: first_app.hpp  keyboard_movement_controller.hpp  lve_buffer.hpp  lve_camera.hpp  lve_descriptors.hpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.hpp  lve_imgui.hpp  lve_model.hpp  lve_pipeline.hpp  lve_render_system.hpp  lve_renderable_obj.hpp  lve_renderer.hpp  lve_swap_chain.hpp  lve_swapchain.hpp  lve_utils.hpp  lve_window.hpp  simple_render_system.hpp  vulkan_engine.hpp
src/simulation/: CMakeLists.txt  simulation_control.cpp  simulation_engine.cpp
src/simulation/include/simulation/: simulation_control.hpp  simulation_engine.hpp
